# ClownfishStudio

./: .gitignore  AGENTS.md  ARCHITECTURE.md  DESIGN.md  Issue.md  README.md
desktop/: README.md  index.html  main.cjs  package-lock.json  package.json  tailwind.config.ts  ui.md  vite.config.ts
docs/: RELEASES.md
server/: .env.example  pyproject.toml
server/app/: __init__.py  main.py
server/app/agents/: __init__.py  prompts.py  radio_agent.py  runtime.py  song_request_agent.py
server/app/api/: agent.py  config.py  errors.py  feedback.py  programs.py  station.py
server/app/core/: config.py
server/app/db/: __init__.py  session.py
server/app/schemas/: __init__.py  radio.py
server/app/services/: __init__.py  desktop_config.py  playlist_runtime.py  program_generation.py  providers.py  session_store.py  station_chat_planner.py  station_events.py  station_feedback.py  station_orchestrator.py  station_reply_presenter.py  station_session_mutations.py  station_tts.py
server/app/tools/: __init__.py  feedback_tool.py  history_tool.py  memory_tool.py  mock_data.py  music_search_tool.py  netease_music_tool.py  podcast_search_tool.py  program_tool.py  weather_tool.py
server/scripts/: start_netease_api.ps1
server/tests/: conftest.py  test_agent_api.py  test_config_api.py  test_feedback_api.py  test_health.py  test_playlist_runtime.py  test_program_generation_api.py  test_program_generation_service.py  test_providers.py  test_radio_agent_runtime.py  test_schemas.py  test_session_store.py  test_station_api.py  test_station_service_modules.py  test_tools.py
(+29 files in other folders)
